elastic-system/elasticsearch/base/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: elasticsearch-gateway
  namespace: elastic-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "elasticsearch.mydomain.org"
      port:
        name: https-es
        number: 443
        protocol: HTTPs
      tls:
        mode: SIMPLE
        credentialName: elasticsearch-es-http-certs-internal
