elastic-system/elasticsearch/base/destinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: elasticsearch
spec:
  # host: "elasticsearch-es-http.elastic-system.svc.cluster.local"
  host: "elasticsearch-es-http.elastic-system.svc"
  trafficPolicy:
    tls:
      mode: SIMPLE
      # 不確定要用哪個..
      credentialName: elasticsearch-es-http-certs-internal
      # credentialName: elasticsearch-es-http-ca-internal
