elastic-system/elasticsearch/base/virtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: elasticsearch-vs
  namespace: elastic-system
spec:
  gateways:
    - elasticsearch-gateway
    - mesh
  hosts:
    - elasticsearch.mydomain.org
    - elasticsearch-es-http.elastic-system.svc.cluster.local
    - elasticsearch-es-http.elastic-system.svc
    - elasticsearch-es-http
  http:
  - route:
    - destination:
        host: elasticsearch-es-http.elastic-system.svc.cluster.local
        port:
          number: 9200
